--- a/Views/Home/IndexLogged.cshtml
+++ b/Views/Home/IndexLogged.cshtml
@@ -5,12 +5,21 @@
 <div class="text-center">
     <h1 class="display-4">Admin</h1>
 <div class="container">
-    <div class="row">
+    
+
+    <div class="my-3 row">
+        <div class="col">
+            <a class="btn btn-warning" asp-area="" asp-controller="Voyage" asp-action="Create">Aggiungi Pacchetto</a>
+        
+            <a class="btn btn-warning" asp-area="" asp-controller="Voyage" asp-action="Index">Visualizza Pacchetti</a>
+        </div>
+    </div>
+
+    <div class="my-3 row">
         <div class="col">
             <a class="btn btn-primary" asp-area="" asp-controller="Destination" asp-action="Create">Aggiungi Destinazione</a>
-        </div>
-        <div class="col">
-            <a class="btn btn-primary" asp-area="" asp-controller="Voyage" asp-action="Create">Aggiungi Pacchetto</a>
+        
+            <a class="btn btn-primary" asp-area="" asp-controller="Destination" asp-action="Index">Visualizza Destinazioni</a>
         </div>
     </div>
 
