--- a/Views/Voyage/Create.cshtml
+++ b/Views/Voyage/Create.cshtml
@@ -28,6 +28,11 @@
             <span asp-validation-for="PacchettoViaggio.Duration" class="text-danger"></span>
         </div>
         <div class="mb-3">
+            <strong>Descrizione:</strong>
+            <input asp-for="PacchettoViaggio.Description" class="d-block w-100" />
+            <span asp-validation-for="PacchettoViaggio.Description" class="text-danger"></span>
+        </div>
+        <div class="mb-3">
             <strong>Prezzo*:</strong>
             <input asp-for="PacchettoViaggio.Price" class="d-block w-100" />
             <span asp-validation-for="PacchettoViaggio.Price" class="text-danger"></span>
