--- a/Views/Voyage/Index.cshtml
+++ b/Views/Voyage/Index.cshtml
@@ -35,7 +35,7 @@
                                 <td>@viaggio.StartDate</td>
                                 <td>@viaggio.Duration giorni</td>
                                 <td>
-                                    @foreach (Destination destination in viaggio.Destination)
+                                    @foreach (Destination destination in viaggio.Destinations)
                                     {
                                         <span>@destination.Name </span>
                                     }
