--- a/Views/Voyage/Edit.cshtml
+++ b/Views/Voyage/Edit.cshtml
@@ -8,7 +8,7 @@
 
 </div>
 <div class="container">
-    <form method="post" action="@Url.Action("Create", "Voyage")">
+    <form method="post" action="@Url.Action("Edit", "Voyage",  new { Id = Model.PacchettoViaggio.Id })">
         @Html.AntiForgeryToken()
 
         <div class="mb-3">
