--- a/Views/Voyage/Index.cshtml
+++ b/Views/Voyage/Index.cshtml
@@ -43,7 +43,7 @@
                                 
                                 <td>@viaggio.Price €</td>
                                 <td>
-                                    <a class="btn btn-warning" href="@Url.Action("Show", "Voyage",new { Id = viaggio.Id } )">Vedi</a>
+                                    <a class="btn btn-warning" href="@Url.Action("Details", "Voyage",new { Id = viaggio.Id } )">Vedi</a>
                                     <a class="btn btn-warning" href="@Url.Action("Edit", "Voyage", new { Id = viaggio.Id } )">Modifica</a>
                                     <form asp-action="Delete" asp-controller="Voyage" asp-route-id="@viaggio.Id" method="post" class="d-inline">
                                         @Html.AntiForgeryToken()
